extensions/jwt_header/testdata/canary_token.txt
eyJhbGciOiJSUzI1NiIsImtpZCI6IkRIRmJwb0lVcXJZOHQyenBBMnFYZkNtcjVWTzVaRXI0UnpIVV8tZW52dlEiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjQ3MzU3NDYwMTgsImdyb3VwIjoiY2FuYXJ5IiwiaWF0IjoxNTgyMTQ2MDE4LCJpc3MiOiJ0ZXN0aW5nQHNlY3VyZS5pc3Rpby5pbyIsInN1YiI6InRlc3RpbmdAc2VjdXJlLmlzdGlvLmlvIn0.Rz1Vq2-55nJUcwozuV-FozoWEh2W0QvtkCbDCXBv6Tr9qxTtJ07uM6OWTnYQo-21sJqH5uv8q8G9j0SkCVX_QfYktR0c76JogXDPw9uZxcuYauQfIGn_E2L3DSShPY7AbTZdCxEMyIaYIBR8B6odRTfaqjuOjMdfSwmZAVtn3buB3Ay4_DY5hspsye8rF614dGPDT0ijr-pSbH_JeBGY6Mucm_86XIrKJ84YsTMJmu0lB [...]
