extensions/jwt_header/testdata/dev_token.txt
eyJhbGciOiJSUzI1NiIsImtpZCI6IkRIRmJwb0lVcXJZOHQyenBBMnFYZkNtcjVWTzVaRXI0UnpIVV8tZW52dlEiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjQ3MzU3NTUxMjgsImdyb3VwIjoiZGV2IiwiaWF0IjoxNTgyMTU1MTI4LCJpc3MiOiJ0ZXN0aW5nQHNlY3VyZS5pc3Rpby5pbyIsInN1YiI6InRlc3RpbmdAc2VjdXJlLmlzdGlvLmlvIn0.jgHb0qrRB74Bxz9Egy2IWVRIfQh5RksYzg_Y6Rp7KE4ttna5UVAPBrwk1eMbL78qFskKB2W_YCAJE1V6gzQqftEnTxJcibluKdhhnhyWNaP-s9eWAWaT1dQRLKEHEGImk-dUYVBwLGeMlz4ywbGNwUaaoYQLgcPeR9dbayjGdBb0OXZwkfKp_nFf6DSeUhSeihjbLLsFHthUItTUeyHxT10s_POGOq9vNSzrQ3yz2aN15DWz1 [...]
