extensions/jwt_header/testdata/server.yaml
node:
  id: test-server-ratings
  metadata:
    ISTIO_VERSION: "1.9-dev"
    EXCHANGE_KEYS: "NAME,NAMESPACE,INSTANCE_IPS,LABELS,OWNER,PLATFORM_METADATA,WORKLOAD_NAME"
    NAME: ratings-v22-84975bc778-pxz2w
    NAMESPACE: default
    WORKLOAD_NAME: ratings
    OWNER: /api/ns/deployment/ratings-deployment
    LABELS: { app: ratings, version: V22 }
    INSTANCE_IPS: "10.52.0.35,fe80::a075:11ff:fe5e:f1cd"
    istio: sidecar
    PLATFORM_METADATA:
      gcp_cluster_name: /redacted/
      gcp_project: "/redacted/"
      gcp_cluster_location: "us-east4-b"
static_resources:
  listeners:
  - name: server
    traffic_direction: INBOUND
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: jwt-group
                    exact_match: "canary"
                route:
                  cluster: service_CANARY
              - match:
                  prefix: "/"
                  headers:
                  - name: jwt-group
                    exact_match: "prod"
                route:
                  cluster: service_PROD
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                origins-0:
                  forward: true
                  issuer: testing@secure.istio.io
                  local_jwks:
                    inline_string: '{ "keys":[ {"e":"AQAB","kid":"DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ","kty":"RSA","n":"xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"}]}'
                  payload_in_metadata: testing@secure.istio.io
              rules:
              - match:
                  prefix: /
                requires:
                  requiresAny:
                    requirements:
                     - providerName: origins-0
                     - allow_missing: {}
          - name: istio_authn
            typed_config:
              "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig"
              policy:
                principal_binding: "USE_ORIGIN"
                origins:
                - jwt:
                    issuer: testing@secure.istio.io
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": "type.googleapis.com/udpa.type.v1.TypedStruct"
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  vm_config:
                    runtime: envoy.wasm.runtime.v8
                    #runtime: envoy.wasm.runtime.null
                    code:
                      local:
                        #inline_string: "envoy.wasm.jwt_header"
                        filename: extensions/jwt_header/plugin.wasm
                  configuration:
                    '@type': type.googleapis.com/google.protobuf.StringValue
                    value: |
                      { "header_map": {"jwt-group": "group"} }
          - name: envoy.filters.http.router
  - name: deployment_CANARY
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8100
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "deployment_CANARY\n"
          http_filters:
          - name: envoy.filters.http.router
  - name: deployment_PROD
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "deployment_PROD\n"
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service_PROD
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8099
  - name: service_CANARY
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8100
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8002
